frontend/tests/cases/positive/hsup/pushOneOne.gr
pushOneOne : forall {a b : Type} . (a, b) [One] -> (a [One], b [One])
pushOneOne [(x, y)] = ([x], [y]) 