frontend/tests/cases/negative/badKindInFunctionConstraint.gr
-- 'a -> b' is not a valid constraint
foo : forall {a : Type, b : Type} . {a -> b} => a -> a
foo x = x
